# bmspace

./: .gitignore  Bms.py  README.md  bms.py  bms_optimized.py  bmspace.service  pyproject.toml  pyvenv.cfg  service.sh  test_bms_optimized.py
src/bmspace/: bms.py  config.py  constants.py  main.py  mqtt_client.py  protocol.py  transport.py
tests/: test_bms.py  test_config.py  test_protocol.py
